@@ -1,0 +1,23 @@
+# $FreeBSD$
+#
+# Provide support for SQLite
+# Feature:	sqlite
+# Usage:	USES=	sqlite[:version]
+# MAINTAINER:	ports@FreeBSD.org
+
+.if !defined(_INCLUDE_USES_FIREBIRD_MK)
+_INCLUDE_USES_FIREBIRD_MK=	yes
+.include "${PORTSDIR}/Mk/bsd.default-versions.mk"
+
+.if !empty(firebird_ARGS)
+FIREBIRD_VER=	${firebird_ARGS}
+.endif
+
+FIREBIRD_VER?=	${FIREBIRD_DEFAULT:S/.//}
+
+.if ${FIREBIRD_VER} == 25
+LIB_DEPENDS+=	libfbclient.so:${PORTSDIR}/databases/firebird25-client
+.else
+IGNORE=		cannot install: unknown Firebird version: ${FIREBIRD_VER}
+.endif
+.endif
